# RoboticsGroupAssignment1

./: .gitignore  Group Project 1 Recording_v2.mov  README.md  log_viewer.py
gazebo_controller/: package.xml  setup.py
gazebo_controller/gazebo_controller/: pid_controller.py
gazebo_controller/launch/: gazebo_maze.launch.py
gazebo_controller/models/diff_drive_robot/: diff_drive_robot.sdf
gazebo_controller/rviz/: config.rviz
gazebo_controller/worlds/: maze.world
src/en613_description/: CMakeLists.txt  package.xml
src/en613_description/launch/: view_en613.launch.py
src/en613_description/rviz/: basic_robot.rviz
src/en613_description/urdf/: basic_robot.gazebo.xacro  basic_robot.sdf  basic_robot.urdf  basic_robot.urdf.xacro  basic_robot_macro.urdf.xacro
src/en613_gazebo/: CMakeLists.txt  README.md  package.xml
src/en613_gazebo/include/en613_gazebo/: BasicSystem.hh  FullSystem.hh
src/en613_gazebo/src/: BasicSystem.cc  FullSystem.cc
src/en613_gazebo/worlds/: maze.world
src/gazebo_controller/: package.xml  setup.cfg  setup.py
src/gazebo_controller/gazebo_controller/: pid_controller.py
src/gazebo_controller/launch/: gazebo_maze.launch.py
src/gazebo_controller/models/gazebo_bot/: diff_drive_robot.sdf  model.config
src/gazebo_controller/worlds/: basic.world
